Working Paper mode: send tables and figures to the end of the document

--- a/LLM_Business_News_Parsing/bib_references.bib
+++ b/LLM_Business_News_Parsing/bib_references.bib
@@ -39,7 +39,7 @@
 @article{garcia2013sentiment,
   title={Sentiment during recessions},
   author={Garcia, Diego},
-  journal={The journal of finance},
+  journal={The Journal of Finance},
   volume={68},
   number={3},
   pages={1267--1300},
@@ -50,7 +50,7 @@
  @article{tetlock2008more,
   title={More than words: Quantifying language to measure firms' fundamentals},
   author={Tetlock, Paul C and Saar-Tsechansky, Maytal and Macskassy, Sofus},
-  journal={The journal of finance},
+  journal={The Journal of Finance},
   volume={63},
   number={3},
   pages={1437--1467},
@@ -465,7 +465,7 @@
 @article{fama1970efficient,
   title={Efficient capital markets},
   author={Fama, Eugene F},
-  journal={Journal of finance},
+  journal={Journal of Finance},
   volume={25},
   number={2},
   pages={383--417},
