--- a/LLM_Business_News_Parsing/txt__ABSTRACT.tex
+++ b/LLM_Business_News_Parsing/txt__ABSTRACT.tex
@@ -1,8 +1,8 @@
 %\begin{abstract}
 %----------------------------------------------------
-% 8th October | ~200 words
+% 8th October | ~200 words | https://chatgpt.com/share/6704e351-460c-800d-a267-1656528e9ec7
 %----------------------------------------------------
-In financial markets, news impact stock prices. Despite the postulated \qquote{Efficient Market Hypothesis}, evidence shows inefficiencies, especially with complex information. Research attempting to explain such inefficiencies has often relied on dictionary-based methods, sentiment analysis, topic modeling, and more recently, language models like BERT, which still lack a comprehensive understanding of the text. Additionally, many studies disregard firm-specific news-implied shocks and overly depend on headlines for analysis. This paper addresses these limitations by leveraging Large Language Models (LLMs) to provide a comprehensive, firm-specific analysis of full news articles. 
+In financial markets, news impact stock prices. Despite the postulated \qquote{Efficient Market Hypothesis}, evidence shows inefficiencies, especially with complex information. Research attempting to explain such inefficiencies has often relied on dictionary-based methods, sentiment analysis, topic modeling, and more recently, vector-based models like BERT, which still lack a comprehensive understanding of the text. Additionally, many studies disregard firm-specific news-implied shocks and overly depend on headlines for analysis. This paper addresses these limitations by leveraging Large Language Models (LLMs) to provide a comprehensive, firm-specific analysis of full news articles. 
 %Using a dataset of Spanish business news articles from DowJones Newswires spanning a period of  heightened uncertainty (June 2020 to September 2021), we apply LLMs to understand economic shocks affecting firms, categorizing them by type, magnitude, and direction. The findings illustrate that LLM-based analysis offers superior insights during such volatile periods compared to a benchmark model (KMeans clustering of vector embeddings, which serves as an upper bound for methods lacking comprehensive content analysis). By using LLMs to parse news articles in a way that mimics human processing of the news-implied firm-specific economic shocks, we are able to understand how market reacts to news article, which is evidenced by the out-of-sample profitability of our simple trading strategy.
 Using a dataset of Spanish business news from DowJones Newswires during a period of high uncertainty (June 2020 to September 2021), we apply LLMs to understand economic shocks affecting firms, categorizing them by type, magnitude, and direction. The findings show that LLM-based analysis provides superior insights during volatile periods compared to a benchmark model (KMeans clustering of vector embeddings, serving as an upper bound for methods lacking comprehensive content analysis). By using LLMs to parse news in a human-like manner, we gain clearer understanding of market reactions to firm-specific information, as evidenced by the profitability of our simple trading strategy.
 
