--- a/LLM_Business_News_Parsing/txt_introduction.tex
+++ b/LLM_Business_News_Parsing/txt_introduction.tex
@@ -1,9 +1,9 @@
 %----------------------------------------------------
-% 7th October 2024 | Introduction (used GPT4o with canvas)
+% 7th October 2024 | Introduction (used GPT4o with canvas) | https://chatgpt.com/share/6704e351-460c-800d-a267-1656528e9ec7
 %----------------------------------------------------
-In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news-ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate and react to new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices. 
+In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news-ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices.
 
-A substantial body of literature has endeavored to predict market reactions to news, yet significant gaps persist. First, there is a lack of granularity in the analysis of information. Traditional approaches frequently rely on dictionary-based sentiment analysis, reducing the richness of news content to binary classifications of positive or negative sentiment. Despite these limitations, dictionary-based methods remain popular due to their ease of implementation and interpretability
+A substantial body of literature has endeavored to predict market reactions to news, yet significant gaps persist. First, there is a lack of granularity in the analysis of information. Traditional approaches frequently rely on sentiment analysis, reducing the richness of news content to binary classifications of positive or negative sentiment. Despite their reductionist nature, sentiment analysis remains popular due to the ease of implementation and interpretability
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 (\cite{tetlock2007giving}, \cite{tetlock2008more}, \cite{bollen2011twitter}, \cite{hanley2010information}, \cite{loughran2011liability}, \cite{garcia2013sentiment}, \cite{jegadeesh2013word}, \cite{ke2019predicting}, \cite{wei2018stock}, \cite{lee2020bert}, 
@@ -47,25 +47,25 @@ The objective of this paper is not to parse the largest dataset available or to 
 %----------------------------------------------------
 % 7th October 2024 | 
 %----------------------------------------------------
-
-The foundation of textual analysis in finance, particularly in predicting stock returns using economic news, has evolved through three main phases: assessing traditional news, exploring novel sources like social media, and incorporating advanced machine learning and natural language processing techniques.
-
-Early studies focused on understanding how public information affects investor behavior and market dynamics. For instance, \cite{cutler1988moves} examined the influence of macroeconomic and political news on aggregate stock prices, revealing that not all price movements are fully explained by news events. \cite{mitchell1994impact} found that the relationship between daily news volume and market response was often weak, suggesting that markets are influenced by factors beyond public news releases.
-
-\cite{chan2003stock} extended this analysis to firm-level reactions, documenting post-news drift, particularly after bad news, which indicated potential underreaction by investors. Similar findings by \cite{abarbanell1992tests} and \cite{michaely1995price} showed systematic underreaction to earnings information and differential market responses to dividend changes, highlighting inefficiencies in information processing. In this line, \cite{jiang2021pervasive} contributed to the understanding of  firm-specific reactions to news by decomposing  daily stock returns into news-driven and non-news-driven components and identified significant underreaction to firm news. This underreaction led to return continuation over several days, creating profitable trading opportunities. The study emphasized the importance of analyzing individual firm responses to news, rather than focusing solely on aggregate behavior.
-
-Other avenues of research highlighted media sentiment's impact on stock returns. \cite{tetlock2007giving} showed that high media pessimism predicted lower future returns, emphasizing sentiment's role in shaping investor decisions. \cite{fang2009media} found that stocks with less media coverage earned higher returns, suggesting that limited dissemination affects risk perception and investor awareness.
-
-Sentiment analysis expanded beyond traditional media with \cite{bollen2011twitter}, who linked Twitter mood to stock market movements, showing that social media sentiment could predict financial outcomes. \cite{jegadeesh2013word} refined content analysis by quantifying word relevance in financial filings, while \cite{loughran2011liability} improved sentiment accuracy using specialized word lists tailored to finance.
-
-Economic linkages inferred from news also gained attention. \cite{scherbina2015economic}, \cite{schwenkler2019network}, \cite{hu2021networks} and \cite{hilt2024different}, found that information flows through firm connections, such as co-mentions in news, contributed to cross-predictability in stock returns, highlighting how news affects interconnected entities.
-
-The rise of machine learning and natural language processing marked a significant shift, allowing for more granular analysis. \cite{ke2019predicting} introduced the Sentiment Extraction via Screening and Topic Modeling (SESTM), leveraging machine learning to predict returns from news content. \cite{bybee2021business} employed Latent Dirichlet Allocation (LDA) to distill news into topics explaining stock market returns. \cite{chen2022expected} present a comprehensive analysis of market timing capabilities using LLMs, emphasizing their efficacy in extracting and modeling stock returns from financial news. The authors maintain a reliance on more traditional technologies such as BERT, RoBERTa, and OPT, for explicating model behaviors, potentially limiting the adaptability and future readiness of their approach.
-
-Recent studies have highlighted the use of LLMs in finance. \cite{bybee2023ghost} used GPT-3.5 to generate economic expectations from historical news, providing macro-level insights but lacking firm-specific detail. \cite{lopez2023can} investigated the use of ChatGPT for stock market predictions by analyzing news headlines, using a dataset consisting of headlines from major news sources post-September 2021. Their method involved prompting ChatGPT to classify headlines as \qquote{good}, \qquote{neutral}, or \qquote{bad} for stock prices. \cite{chen2023chatgpt} utilized a similar approach, using news headlines to predict aggregate market movements, in this case tasking ChatGPT with reading a headline and predicting whether the stock market will \qquote{go up}, \qquote{go down}, or remain \qquote{unknown}. These approaches employed LLMs to analyze broad market impacts, but did not fully explore the firm-level insights that can be derived from detailed news content.
-
-This paper utilizes LLMs to analyze complete news articles, providing deeper insights into firm-level stock performance and enhancing the precision of news-driven financial predictions. Building on these advancements, this paper addresses gaps in the literature. Traditional methods like dictionary-based sentiment analysis and topic modeling offer valuable insights but face limitations. Sentiment analysis oversimplifies information into positive or negative categories, lacking nuance. Topic models, on the other hand, require reestimation when topics evolve, making them less effective over time in changing environments. By leveraging LLMs for detailed news analysis at a firm-specific level, this paper introduces a more nuanced methodology for predicting stock returns, focusing on how specific economic shocks impact individual firms rather than relying solely on aggregate or sentiment-based measures.
-
+%
+%The foundation of textual analysis in finance, particularly in predicting stock returns using economic news, has evolved through three main phases: assessing traditional news, exploring novel sources like social media, and incorporating advanced machine learning and natural language processing techniques.
+%
+%Early studies focused on understanding how public information affects investor behavior and market dynamics. For instance, \cite{cutler1988moves} examined the influence of macroeconomic and political news on aggregate stock prices, revealing that not all price movements are fully explained by news events. \cite{mitchell1994impact} found that the relationship between daily news volume and market response was often weak, suggesting that markets are influenced by factors beyond public news releases.
+%
+%\cite{chan2003stock} extended this analysis to firm-level reactions, documenting post-news drift, particularly after bad news, which indicated potential underreaction by investors. Similar findings by \cite{abarbanell1992tests} and \cite{michaely1995price} showed systematic underreaction to earnings information and differential market responses to dividend changes, highlighting inefficiencies in information processing. In this line, \cite{jiang2021pervasive} contributed to the understanding of  firm-specific reactions to news by decomposing  daily stock returns into news-driven and non-news-driven components and identified significant underreaction to firm news. This underreaction led to return continuation over several days, creating profitable trading opportunities. The study emphasized the importance of analyzing individual firm responses to news, rather than focusing solely on aggregate behavior.
+%
+%Other avenues of research highlighted media sentiment's impact on stock returns. \cite{tetlock2007giving} showed that high media pessimism predicted lower future returns, emphasizing sentiment's role in shaping investor decisions. \cite{fang2009media} found that stocks with less media coverage earned higher returns, suggesting that limited dissemination affects risk perception and investor awareness.
+%
+%Sentiment analysis expanded beyond traditional media with \cite{bollen2011twitter}, who linked Twitter mood to stock market movements, showing that social media sentiment could predict financial outcomes. \cite{jegadeesh2013word} refined content analysis by quantifying word relevance in financial filings, while \cite{loughran2011liability} improved sentiment accuracy using specialized word lists tailored to finance.
+%
+%Economic linkages inferred from news also gained attention. \cite{scherbina2015economic}, \cite{schwenkler2019network}, \cite{hu2021networks} and \cite{hilt2024different}, found that information flows through firm connections, such as co-mentions in news, contributed to cross-predictability in stock returns, highlighting how news affects interconnected entities.
+%
+%The rise of machine learning and natural language processing marked a significant shift, allowing for more granular analysis. \cite{ke2019predicting} introduced the Sentiment Extraction via Screening and Topic Modeling (SESTM), leveraging machine learning to predict returns from news content. \cite{bybee2021business} employed Latent Dirichlet Allocation (LDA) to distill news into topics explaining stock market returns. \cite{chen2022expected} present a comprehensive analysis of market timing capabilities using LLMs, emphasizing their efficacy in extracting and modeling stock returns from financial news. The authors maintain a reliance on more traditional technologies such as BERT, RoBERTa, and OPT, for explicating model behaviors, potentially limiting the adaptability and future readiness of their approach.
+%
+%Recent studies have highlighted the use of LLMs in finance. \cite{bybee2023ghost} used GPT-3.5 to generate economic expectations from historical news, providing macro-level insights but lacking firm-specific detail. \cite{lopez2023can} investigated the use of ChatGPT for stock market predictions by analyzing news headlines, using a dataset consisting of headlines from major news sources post-September 2021. Their method involved prompting ChatGPT to classify headlines as \qquote{good}, \qquote{neutral}, or \qquote{bad} for stock prices. \cite{chen2023chatgpt} utilized a similar approach, using news headlines to predict aggregate market movements, in this case tasking ChatGPT with reading a headline and predicting whether the stock market will \qquote{go up}, \qquote{go down}, or remain \qquote{unknown}. These approaches employed LLMs to analyze broad market impacts, but did not fully explore the firm-level insights that can be derived from detailed news content.
+%
+%This paper utilizes LLMs to analyze complete news articles, providing deeper insights into firm-level stock performance and enhancing the precision of news-driven financial predictions. Building on these advancements, this paper addresses gaps in the literature. Traditional methods like dictionary-based sentiment analysis and topic modeling offer valuable insights but face limitations. Sentiment analysis oversimplifies information into positive or negative categories, lacking nuance. Topic models, on the other hand, require reestimation when topics evolve, making them less effective over time in changing environments. By leveraging LLMs for detailed news analysis at a firm-specific level, this paper introduces a more nuanced methodology for predicting stock returns, focusing on how specific economic shocks impact individual firms rather than relying solely on aggregate or sentiment-based measures.
+%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
