--- a/Reinforced_Learning_in_Asset_Pricing/__main__.tex
+++ b/Reinforced_Learning_in_Asset_Pricing/__main__.tex
@@ -94,20 +94,17 @@ $\big{>}$
 
 \noindent \Vhrulefill
 
+\bblue{\textbf{USE BAYESIAN REINFORCEMENT LEARNING}}
 
+%\input{txt_conv_chatgpt.tex}
+\input{txt_conv_chatgpt2.tex}
 
-\input{txt_1_Introduction.tex}
+%\input{txt_1_Introduction.tex}
 \input{txt_2_Methodology.tex}
 \input{txt_3_Implementation.tex}
-\input{txt_4_Empirical_Evaluation.tex}
-\input{txt_5_Conclusion.tex}
-\input{txt_6_Technical_Appendix.tex}
-
-
-
-
-
-
+%\input{txt_4_Empirical_Evaluation.tex}
+%\input{txt_5_Conclusion.tex}
+%\input{txt_6_Technical_Appendix.tex}
 
 
 %%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
