--- a/LLM_Business_News_Parsing/__main__.tex
+++ b/LLM_Business_News_Parsing/__main__.tex
@@ -1,14 +1,13 @@
-%\documentclass[12pt,article]{memoir}
 \documentclass[12pt,a4paper]{article}
 
 %---------------------- MACROS -----------------------
-%\usepackage{$$JVM_Macros}
-%\usepackage{/Users/jesusvillotamiranda/Documents/LaTeX/$$JVM_Macros}
 \usepackage{/Users/jesusvillotamiranda/Documents/LaTeX/JVM_Macros}
 %----------------------------------------------------
 
 \usepackage{authblk} % to write the title with the authors
-\usepackage{booktabs} % when using \documentclass[12pt,a4paper]{article}, you need to load this
+\usepackage{booktabs} % for better tables
+%\usepackage[nomarkers, nolists, tablesfirst]{endfloat} % puts tables and figures at the end of the document
+\usepackage{etoolbox} % For \AtBeginEnvironment and \AtEndEnvironment
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -23,21 +22,13 @@
 
 \author[1]{
 { 
-%\bx \bx 
 \sx \bx 
 Jesus Villota Miranda$^{\dagger}$\footnote{
-%\textsc{Cemfi} 
-I am grateful to Enrique Sentana, Dante Amengual, Julio Crego, Francisco Penaranda, Nicolas Forteza, Matias Covarrubias, Javier Suarez and David Martinez-Miera for useful comments and feedback. 
+I am grateful to Enrique Sentana, Dante Amengual, Rafael Repullo, Julio Crego, Francisco Penaranda, Javier Suarez, David Martinez-Miera, Juan Segura-Buisan, Nicolas Forteza, and Matias Covarrubias for useful comments and feedback. 
 I acknowledge financial support from Banco de España (BdE). 
-%For financial support, I thank Banco de España (BdE). 
-%\textit{Email}: 
-%\href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
-%\textit{Address}: 
-%Calle Casado del Alisal, 5, Retiro, 28014, Madrid, Spain. 
 }}
 
 \bx 
-%(\textsc{cemfi})
 {\small
 $\big{<}$
 \noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
@@ -59,61 +50,104 @@ $\big{>}$
 \input{txt__ABSTRACT.tex}
 %----------------------------------------------------
 
-%\bigskip
 \noindent\textbf{JEL Codes:} G12, G14, C45, C58, C63, D83
 
 \noindent\textbf{Keywords:} Large Language Models, Business News, Stock Market Reaction, Market Efficiency
 \end{abstract}
 
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
+\setcounter{page}{1}
 
-%\title{Predicting Market Reactions to News: A Large Language Model-Based Approach Using Spanish Business Articles}
+%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
+\section{Introduction}
+%----------------------------------------------------
+\input{txt_introduction.tex}
+%----------------------------------------------------
+
+%%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
+\section{Data}
+%----------------------------------------------------
+\input{txt_database_description.tex}
+%----------------------------------------------------
+
+%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
+\section{Methodology}
+\input{txt_Model_KMeans.tex} 
+\input{txt_Model_LLM.tex}
+\input{txt_Robustness_Checks.tex}
+
+%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
+\input{txt__CONCLUSION.tex}
+
+%%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
+\bibliography{bib_references.bib}
+\bibliographystyle{plain}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% End the main part of the paper here, after this tables/figures appear
+%\newpage
+%\processdelayedfloats % To make sure all the tables/figures appear before the appendix
 %
-%\author{Jesús Villota Miranda$^{a}$\thanks{Corresponding author.}}
+%% Save the original figure and table environments
+%\let\origfigure\figure
+%\let\endorigfigure\endfigure
+%\let\origtable\table
+%\let\endorigtable\endtable
 %
-%\date{}  % Remove date
 %
-%\begin{document}
+%% Reset the numbering for appendix figures and tables
+%\renewcommand{\thefigure}{A\arabic{figure}} 
+%\renewcommand{\thetable}{A\arabic{table}}
 %
-%\maketitle
+%\appendix
 %
-%\noindent $^{a}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain. Email: jesus.villota@cemfi.edu.es
+%%% Restore the original behavior of figure and table in the appendix
+%\renewenvironment{figure}{\origfigure}{\endorigfigure}
+%\renewenvironment{table}{\origtable}{\endorigtable}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% End the main part of the paper here, after this tables/figures appear
+\newpage
+\processdelayedfloats % To make sure all the tables/figures appear before the appendix
+
+% Reset the numbering for appendix figures and tables
+\renewcommand{\thefigure}{A\arabic{figure}} 
+\renewcommand{\thetable}{A\arabic{table}}
+
+\appendix
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Appendix}
+\input{txt_Appendix.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\end{document}
+
+
+
+
+
+%\documentclass[12pt,a4paper]{article}
 %
-%\begin{abstract}
+%%---------------------- MACROS -----------------------
+%\usepackage{/Users/jesusvillotamiranda/Documents/LaTeX/JVM_Macros}
 %%----------------------------------------------------
-%\input{txt__ABSTRACT.tex}
-%%----------------------------------------------------
 %
-%\bigskip
-%\noindent\textbf{JEL Codes:} G12, G14
+%\usepackage{authblk} % to write the title with the authors
+%\usepackage{booktabs} % when using \documentclass[12pt,a4paper]{article}, you need to load this
+%\usepackage[nomarkers, nolists, tablesfirst]{endfloat} % puts tables and figures at the end of the document
 %
-%\noindent\textbf{Keywords:} Large Language Models, Business News, Stock Market Reaction
-%\end{abstract}
+%\usepackage{etoolbox} % To use \AtBeginEnvironment and \AtEndEnvironment
 %
-%% Your main content goes here
-%
-%% Acknowledgments section at the end of the paper
-%\section*{Acknowledgments}
-%
-%I am grateful to Enrique Sentana, Dante Amengual, Julio Crego, Francisco Peñaranda, Nicolás Forteza, Matías Covarrubias, Javier Suárez, and David Martínez-Miera for useful comments and feedback. For financial support, I thank Banco de España (BdE).
-
-
-
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\title{\textsc{
 %{\LARGE Predicting Market Reactions to News:} 
@@ -122,125 +156,131 @@ $\big{>}$
 %}}
 %
 %\author[1]{
-%{ \bx \bx \bx Jesus Villota Miranda}\footnote{
-%%\textsc{PhD} Student at 
-%\textsc{Cemfi} (Madrid, Spain). 
-%%Advisor: Enrique Sentana. 
-%Contact: \href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
-%%I am grateful to everyone that contributed to the three discussions from my presentations. I acknowledge funding from the Bank of Spain to study this master's degree.
-%}
-%%\footnote{I would like to express my deepest gratitude to the Bank of Spain for their generous funding and support of my master's studies at \textsc{Cemfi}. 
-%%I am also grateful to my advisor, colleagues, and family for their continuous support and encouragement throughout this journey.}
-%}
+%{ 
+%%\bx \bx 
+%\sx \bx 
+%Jesus Villota Miranda$^{\dagger}$\footnote{
+%%\textsc{Cemfi} 
+%I am grateful to Enrique Sentana, Dante Amengual, Rafael Repullo, Julio Crego, Francisco Penaranda, Javier Suarez, David Martinez-Miera, Juan Segura-Buisan, Nicolas Forteza and Matias Covarrubias for useful comments and feedback. 
+%I acknowledge financial support from Banco de España (BdE). 
+%%For financial support, I thank Banco de España (BdE). 
+%%\textit{Email}: 
+%%\href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
+%%\textit{Address}: 
+%%Calle Casado del Alisal, 5, Retiro, 28014, Madrid, Spain. 
+%}}
 %
-%%\author[2]{Matías Covarrubias}
-%%\author[2]{Nicolás Forteza}
-%%\author[3]{Fourth Author}
-%%\author[1,*]{Fifth Author}
-%%\affil[1]{\small CEMFI}
-%%\affil[2]{\small Bank of Spain}
-%%\affil[3]{Department, Organization, Street, City, 610101, State, Country}
-%%\affil[*]{Corresponding author: \texttt{user\_id@university.edu}}
+%\bx 
+%%(\textsc{cemfi})
+%{\small
+%$\big{<}$
+%\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
+%$\big{>}$
+%
+%$\big{<}$
+%Email: \href{jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
+%$\big{>}$
+%}
+%}
 %
 %\date{}  % Remove date
 %
-%\setcounter{tocdepth}{2} % Only show up to subsections in the Table of Contents
-%
 %\begin{document}
 %
-%\newpage
-%%%%%%%%%%%% TITLE & ABSTRACT %%%%%%%%%%%
 %\maketitle
+%\begin{abstract}
 %%----------------------------------------------------
 %\input{txt__ABSTRACT.tex}
 %%----------------------------------------------------
 %
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%% TABLE OF CONTENTS %%%%%%%%%%%
+%%\bigskip
+%\noindent\textbf{JEL Codes:} G12, G14, C45, C58, C63, D83
+%
+%\noindent\textbf{Keywords:} Large Language Models, Business News, Stock Market Reaction, Market Efficiency
+%\end{abstract}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%%%%%%%%% TABLE OF CONTENTS %%%%%%%%%%%
+%%\newpage
+%%\thispagestyle{empty}
+%%\tableofcontents
+%%\thispagestyle{empty}
+%
+%
 %\newpage
-%\thispagestyle{empty}
-%\tableofcontents
-%\thispagestyle{empty}
-
-
-\newpage
-\setcounter{page}{1}
-%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
-\section{Introduction}
-%----------------------------------------------------
-\input{txt_introduction.tex}
-%----------------------------------------------------
-
-
-%%%%%%%%%%%%% LITERATURE REVIEW %%%%%%%%%%%%%%%%%%
-%\section{Literature Review}
+%\setcounter{page}{1}
+%%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
+%\section{Introduction}
 %%----------------------------------------------------
-%\input{txt_literature_review.tex}
+%\input{txt_introduction.tex}
 %%----------------------------------------------------
-
-
-%%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
-\section{Data}
-%----------------------------------------------------
-\input{txt_database_description.tex}
-%----------------------------------------------------
-
-
-
+%
+%
+%%%%%%%%%%%%%% LITERATURE REVIEW %%%%%%%%%%%%%%%%%%
+%%\section{Literature Review}
+%%%----------------------------------------------------
+%%\input{txt_literature_review.tex}
+%%%----------------------------------------------------
+%
+%
+%%%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
+%\section{Data}
+%%----------------------------------------------------
+%\input{txt_database_description.tex}
+%%----------------------------------------------------
+%
+%
+%
+%%\newpage
+%%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
+%\section{Methodology}
+%%--------------------- KMEANS -----------------------
+%\input{txt_Model_KMeans.tex} 
+%%----------------------------------------------------
+%
+%%\newpage
+%%--------------------- LLMs -------------------------
+%\input{txt_Model_LLM.tex}
+%%----------------------------------------------------
+%
+%
+%%--------------------- LLMs -------------------------
+%\input{txt_Robustness_Checks.tex}
+%%----------------------------------------------------
+%
+%%%%%%%%%%%%%%%%%%% HIGH FREQUENCY %%%%%%%%%%%%%%%%%%%%%%
+%%\section{High Frequency Analysis}
+%%\input{txt_HF_Analysis.tex}
+%
+%%%%%%%%%%%%%%%%%% EVENT STUDY %%%%%%%%%%%%%%%%%%%%%%
+%%\section{Event Study}
+%%\input{txt_Event_Study.tex}
+%
+%%%%%%%%%%%%%%%%%% TRANSACTION COSTS %%%%%%%%%%%%%%%%%%%%%%
+%%\section{Transaction Costs}
+%%\input{txt_Transaction_Costs.tex}
+%
+%
+%%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
+%\input{txt__CONCLUSION.tex}
+%
+%
+%%%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
+%\bibliography{bib_references.bib}
+%\bibliographystyle{plain}
+%
+%
 %\newpage
-%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
-\section{Methodology}
-%--------------------- KMEANS -----------------------
-\input{txt_Model_KMeans.tex} 
-%----------------------------------------------------
-
-%\newpage
-%--------------------- LLMs -------------------------
-\input{txt_Model_LLM.tex}
-%----------------------------------------------------
-
-
-%--------------------- LLMs -------------------------
-\input{txt_Robustness_Checks.tex}
-%----------------------------------------------------
-
-%%%%%%%%%%%%%%%%%% HIGH FREQUENCY %%%%%%%%%%%%%%%%%%%%%%
-%\section{High Frequency Analysis}
-%\input{txt_HF_Analysis.tex}
-
-%%%%%%%%%%%%%%%%% EVENT STUDY %%%%%%%%%%%%%%%%%%%%%%
-%\section{Event Study}
-%\input{txt_Event_Study.tex}
-
-%%%%%%%%%%%%%%%%% TRANSACTION COSTS %%%%%%%%%%%%%%%%%%%%%%
-%\section{Transaction Costs}
-%\input{txt_Transaction_Costs.tex}
-
-
-%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
-\input{txt__CONCLUSION.tex}
-
-
-%%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
-\bibliography{bib_references.bib}
-\bibliographystyle{plain}
-
-
-\newpage
-\appendix
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Appendix}
-\input{txt_Appendix.tex}
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\end{document}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\appendix
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\section{Appendix}
+%\input{txt_Appendix.tex}
+%
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\end{document}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
