--- a/LLM_Business_News_Parsing/txt_Appendix.tex
+++ b/LLM_Business_News_Parsing/txt_Appendix.tex
@@ -22,8 +22,9 @@ where $k$ represents the number of clusters (26 for KMeans clustering, and 20 fo
 In \cref{fig:KMeans_hyperparameter_justification_L} we can see that a choice of $L=4$ in the training and validation splits generates the most stable Sharpe Ratio. Namely, In the train set (\cref{fig:K_hyp_1}), it makes more sense to choose low values of $L$ (less than 4) to maximize the $SR$. However, in the validation set (\cref{fig:K_hyp_2}), it makes more sense to choose higher values of $L$. The choice of $L=4$ stands as a middle ground between this contradiction, generating a stable choice and a stable profile of earnings in sample.
 
 %----------------------------------------------------
+\inserthere{fig:KMeans_hyperparameter_justification_L}
 \begin{figure}[H]
-  \caption{Sharpe Ratios in the train and validation splits as a function of $L$}
+  \caption{Sharpe Ratios in the train and validation splits as a function of $L$ (KMeans)}
   \centering
   
   \begin{subfigure}[b]{0.46\textwidth}
@@ -46,8 +47,9 @@ In \cref{fig:KMeans_hyperparameter_justification_L} we can see that a choice of 
 On the other hand, the choice of $\theta=\integer{0.5\cd 26}=13$ is a choice that pursues stability in the Sharpe Ratio of the train and validation portfolios. As we can see from \cref{fig:KMeans_hyperparameter_justification_theta}, the Sharpe Ratios tend to converge to the highest and most stable value when we choose the highest possible value of $\theta$. 
 
  %----------------------------------------------------
+\inserthere{fig:KMeans_hyperparameter_justification_theta}
 \begin{figure}[H]
-  \caption{Sharpe Ratios in the train and validation splits as a function of $\theta$}
+  \caption{Sharpe Ratios in the train and validation splits as a function of $\theta$ (KMeans)}
   \centering
     \begin{subfigure}[b]{0.46\textwidth}
     \centering
@@ -71,8 +73,9 @@ On the other hand, the choice of $\theta=\integer{0.5\cd 26}=13$ is a choice tha
 Following a similar logic as below, the choice of $L=4$ sets a consensus between the maximization of $SR^{\mathcal P^{tr}}$ and $SR^{\mathcal P^{val}}$. That is, maximizing $SR^{\mathcal P^{tr}}$ requires lower holding period lengths (the maximizer is $L=4$), while maximizing $SR^{\mathcal P^{val}}$ requires increasing the window length. Among this contradiction, $L=4$ standing as a perfect choice to balance the maximization requirements in both samples, generating a stable choice for the holding period window length.
 
 %----------------------------------------------------
+\inserthere{fig:LLM_hyperparameter_justification_L}
 \begin{figure}[H]
-  \caption{Sharpe Ratios in the train and validation splits as a function of hyperparameters}
+  \caption{Sharpe Ratios in the train and validation splits as a function of hyperparameters (LLM)}
   \centering
   
   \begin{subfigure}[b]{0.46\textwidth}
@@ -95,8 +98,10 @@ Following a similar logic as below, the choice of $L=4$ sets a consensus between
 %----------------------------------------------------
 
 Finally, the same conclusion as in KMeans applies here. By selecting $\theta=\integer{0.5\cd 20}=10$, we get a stable Sharpe Ratio. Even though we observe that $SR^{\mathcal P^{tr}}(L)$ falls momentarily at $\theta=10$ for the Greedy algorithm, it still constitutes a good choice. Conversely, at $\theta=10$ the greedy algorithm sees a jump in $SR^{\mathcal P^{val}}(L)$. All in all, we can easily conclude that $\theta=\integer{0.5k}$ arises as a good hyperpamrameter choice also for LLM clustering.
-
+%----------------------------------------------------
+\inserthere{fig:LLM_hyperparameter_justification_theta}
 \begin{figure}[H]
+\caption{Sharpe Ratios in the train and validation splits as a function of $\theta$ (LLM)}
   \centering
 
     \begin{subfigure}[b]{0.46\textwidth}
@@ -115,7 +120,7 @@ Finally, the same conclusion as in KMeans applies here. By selecting $\theta=\in
 
 \label{fig:LLM_hyperparameter_justification_theta}
 \end{figure}
-
+%----------------------------------------------------
 
 
 
