safety duplicate: getting into business

--- a/LLM_Business_News_Parsing/__main__.tex
+++ b/LLM_Business_News_Parsing/__main__.tex
@@ -6,7 +6,7 @@
 
 \usepackage{authblk} % to write the title with the authors
 \usepackage{booktabs} % for better tables
-%\usepackage[nomarkers, nolists, tablesfirst]{endfloat} % puts tables and figures at the end of the document
+\usepackage[nomarkers, nolists, tablesfirst]{endfloat} % puts tables and figures at the end of the document
 \usepackage{etoolbox} % For \AtBeginEnvironment and \AtEndEnvironment
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -72,7 +72,8 @@ $\big{>}$
 %%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data}
 %----------------------------------------------------
-\input{txt_database_description.tex}
+\input{txt_Data.tex}
+%\input{txt_database_description.tex}
 %----------------------------------------------------
 
 %%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
