--- a/LLM_Business_News_Parsing/txt_Model_KMeans.tex
+++ b/LLM_Business_News_Parsing/txt_Model_KMeans.tex
@@ -1,6 +1,6 @@
  \hspace{0.5cm} 
  Our dataset consists of $N=2,613$ Spanish business news articles 
- sourced from DowJones and spanning the period from June 24, 2020, to September 30, 2021. 
+ sourced from DowJones and spanning the period from 2020/06/24 to 2021/09/30. 
  We denote as $\mathcal D$ the set of all articles in our sample.
  % from DowJones for the period 2020-6-24 to 2021-09-30. 
  These articles have been specifically filtered to reference firms listed on the IBEX-35.
